Fix approve and approveWrap in transfers history

--- a/src/App.scss
+++ b/src/App.scss
@@ -999,6 +999,7 @@ li a {
 }
 
 .br__transferData {
+
   .chainIcon,
   svg {
     width: 15px !important;
@@ -1111,10 +1112,25 @@ body::-webkit-scrollbar {
   background-image: linear-gradient(45deg, #009688 0%, #0c5f57 100%);
 }
 
+.br__action_approve {
+  background-image: linear-gradient(135deg, #29b1a9 0%, #14532a 100%);
+}
+
+.br__action_approveWrap {
+  background-image: linear-gradient(135deg, #14532a 0%, #29b1a9 100%);
+}
+
 .capitalize {
   text-transform: capitalize;
 }
 
 .bold {
   font-weight: bold !important;
+}
+
+.br__openExplorerBtn {
+  svg {
+    width: 15px !important;
+    height: 15px !important
+  }
 }
